# marlowe-dependency-docs

./: .gitignore  ReadMe.md  cabal.project  compendium.cabal  default.nix  marlowe-dependency-docs.cabal  serve-hoogle.sh  shell.nix
nix/: sources.json
src/: Compendium.hs
