cabal-version:      3.0
name:               compendium
version:            0.1.0.0
synopsis:           Compendium of compatible packages.
license:            Apache-2.0
license-file:       LICENSE
author:             Brian W Bush <brian.bush@iohk.io>
maintainer:         Brian W Bush <brian.bush@iohk.io>

library
    exposed-modules : Compendium
    hs-source-dirs  : src
    build-depends   : base ^>= 4.14.3.0
--                  , adjunctions
                    , aeson
--                  , aeson-casing
                    , aeson-pretty
--                  , aeson-qq
--                  , algebraic-graphs
--                  , ansi-terminal
--                  , ansi-wl-pprint
                    , array
                    , async
                    , async-timer
                    , attoparsec
--                  , attoparsec-iso8601
--                  , auto-update
--                  , barbies
                    , base-deriving-via
                    , base16-bytestring
                    , base58-bytestring
                    , base64-bytestring
                    , base64-bytestring-type
--                  , basement
--                  , beam-core
--                  , beam-migrate
--                  , beam-sqlite
                    , bech32
--                  , bech32-th
--                  , benchpress
--                  , bifunctors
--                  , bimap
                    , binary
--                  , binary-search
--                  , blaze-html
                    , byron-spec-chain
                    , byron-spec-ledger
                    , bytestring
--                  , canonical-json
                    , cardano-addresses
                    , cardano-addresses-cli
--                  , cardano-addresses-jsapi
--                  , cardano-addresses-jsbits
                    , cardano-api
                    , cardano-binary
                    , cardano-cli
--                  , cardano-client
                    , cardano-config
                    , cardano-crypto
                    , cardano-crypto-class
                    , cardano-crypto-praos
                    , cardano-crypto-wrapper
----                , cardano-db
----                , cardano-db-sync
----                , cardano-db-sync-extended
----                , cardano-db-tool
--                  , cardano-ledger
                    , cardano-ledger-alonzo
                    , cardano-ledger-byron
                    , cardano-ledger-core
--                  , cardano-ledger-example-shelley
--                  , cardano-ledger-pretty
                    , cardano-ledger-shelley
                    , cardano-ledger-shelley-ma
                    , cardano-node
                    , cardano-numeric
                    , cardano-prelude
                    , cardano-protocol-tpraos
--                  , cardano-sl-x509
                    , cardano-slotting
----                , cardano-smash-server
                    , cardano-submit-api
----                , cardano-sync
----                , cardano-wallet
----                , cardano-wallet-cli
----                , cardano-wallet-core
----                , cardano-wallet-core-integration
----                , cardano-wallet-launcher
--                  , casing
--                  , cassava
--                  , cborg
--                  , clock
--                  , code-page
--                  , colour
--                  , command
--                  , compact-map
--                  , composition-prelude
                    , conduit
                    , conduit-extra
--                  , connection
--                  , constraints
--                  , constraints-extras
                    , containers
--                  , contra-tracer
                    , contravariant
--                  , cookie
--                  , criterion
--                  , criterion-measurement
--                  , cryptohash
--                  , cryptonite
                    , data-default
--                  , data-default-class
--                  , data-fix
--                  , data-ordlist
--                  , dbvar
                    , deepseq
--                  , delay
--                  , dependent-map
--                  , dependent-sum
--                  , dependent-sum-template
--                  , deque
--                  , deriving-aeson
--                  , deriving-compat
--                  , digest
                    , directory
--                  , dlist
--                  , dns
--                  , doctest
--                  , dom-lt
--                  , download
--                  , either
                    , ekg
                    , ekg-core
                    , ekg-forward
--                  , else
--                  , errors
--                  , esqueleto
--                  , exact-combinatorics
--                  , exceptions
--                  , extensible-effects
--                  , extra
--                  , fail
--                  , fake-pab
                    , fast-logger
--                  , fgl
--                  , file-embed
--                  , filelock
--                  , filemanip
                    , filepath
--                  , fingertree
--                  , flat
--                  , fmt
--                  , foldl
--                  , fomega
--                  , formatting
--                  , foundation
--                  , free
                    , freer-extras
--                  , freer-simple
--                  , gauge
--                  , generic-arbitrary
--                  , generic-data
--                  , generic-deriving
--                  , generic-lens
--                  , generic-lens-core
--                  , generic-monoid
--                  , generic-random
--                  , generics-sop
--                  , genvalidity
--                  , genvalidity-scientific
--                  , ghc
--                  , ghc-heap
--                  , ghc-prim
--                  , ghcjs-base
--                  , gnuplot
                    , goblins
--                  , graphviz
--                  , groups
--                  , hashable
--                  , hedgehog
--                  , hedgehog-corpus
                    , hedgehog-extras
--                  , hedgehog-quickcheck
--                  , heredoc
--                  , hint
--                  , Histogram
--                  , hjsonschema
--                  , hostname
--                  , hspec
--                  , hspec-core
--                  , hspec-expectations
--                  , hspec-expectations-lifted
--                  , hspec-expectations-pretty-diff
--                  , hspec-golden
--                  , hspec-golden-aeson
--                  , hspec-hedgehog
--                  , hsyslog
--                  , http-api-data
--                  , http-client
--                  , http-client-tls
--                  , http-conduit
--                  , http-media
--                  , http-types
--                  , HUnit
--                  , ieee754
--                  , if
--                  , immortal
--                  , index-envs
--                  , inline-r
--                  , insert-ordered-containers
--                  , inspector
--                  , int-cast
--                  , integer-gmp
--                  , IntervalMap
                    , io-classes
                    , io-sim
--                  , iohk-monitoring
--                  , iproute
--                  , ixset-typed
--                  , jsaddle
--                  , jsaddle-warp
--                  , JuicyPixels
--                  , jwt
--                  , katip
--                  , lattices
--                  , lazy-search
                    , lens
                    , lens-aeson
--                  , libsystemd-journal
--                  , lifted-base
--                  , list-t
--                  , lists-internal
--                  , lobemo-backend-aggregation
--                  , lobemo-backend-editor
--                  , lobemo-backend-ekg
--                  , lobemo-backend-monitoring
--                  , lobemo-backend-trace-acceptor
--                  , lobemo-backend-trace-forwarder
--                  , lobemo-scribe-systemd
--                  , loch-th
--                  , locli
--                  , logfloat
--                  , mainland-pretty
  --                , mantra
  --                , mantra-oracle
----                , marlowe
----                , marlowe-actus
----                , marlowe-dashboard-server
----                , marlowe-playground-server
----                , marlowe-symbolic
--                  , math-functions
                    , measures
--                  , megaparsec
--                  , memory
--                  , microlens
--                  , microlens-mtl
--                  , microlens-th
--                  , microstache
--                  , mmorph
--                  , monad-control
--                  , monad-logger
                    , MonadRandom
--                  , mono-traversable
--                  , monoidal-containers
                    , monoidal-synchronisation
--                  , moo
                    , mtl
--                  , mwc-random
                    , network
                    , network-mux
                    , network-uri
--                  , newtype-generics
--                  , nofib-internal
                    , non-integral
--                  , nonempty-containers
--                  , nothunks
--                  , ntp-client
--                  , OddWord
--                  , openapi3
                    , optparse-applicative
--                  , optparse-applicative-fork
--                  , optparse-generic
                    , orphans-deriving-via
--                  , ouroboros-consensus
                    , ouroboros-consensus-byron
--                  , ouroboros-consensus-byronspec
                    , ouroboros-consensus-cardano
--                  , ouroboros-consensus-mock
                    , ouroboros-consensus-shelley
                    , ouroboros-network
                    , ouroboros-network-framework
--                  , parsec
--                  , parser-combinators
--                  , partial-order
--                  , path-pieces
                    , persistent
--                  , persistent-documentation
--                  , persistent-postgresql
--                  , persistent-sqlite
--                  , persistent-template
--                  , pipes
----                , playground-common
  --                , plutus-benchmark
--                  , plutus-benchmark-common
----                , plutus-chain-index
----                , plutus-chain-index-core
----                , plutus-contract
----                , plutus-core
----                , plutus-errors
  --                , plutus-example
----                , plutus-ghc-stub
----                , plutus-ledger
----                , plutus-ledger-api
  --                , plutus-metatheory
----                , plutus-pab
----                , plutus-playground-server
--                  , plutus-playground-usecases
                    , plutus-tx
                    , plutus-tx-plugin
----                , plutus-use-cases
--                  , postgresql-simple
--                  , pretty
--                  , pretty-show
--                  , pretty-simple
--                  , prettyprinter
                    , prettyprinter-configurable
--                  , primitive
                    , process
--                  , process-extras
--                  , profunctors
--                  , prometheus
--                  , protolude
--                  , psqueues
                    , purescript-bridge
                    , QuickCheck
--                  , quickcheck-classes
                    , quickcheck-dynamic
--                  , quickcheck-instances
--                  , quickcheck-state-machine
--                  , quickcheck-text
--                  , quiet
--                  , random
--                  , random-shuffle
--                  , Rasterific
--                  , rate-limit
--                  , recursion-schemes
--                  , regex-compat
--                  , regex-pcre-builtin
--                  , req
--                  , resource-pool
--                  , resourcet
--                  , retry
--                  , row-types
--                  , safe
--                  , safe-exceptions
--                  , say
--                  , sbv
                    , scientific
--                  , scrypt
--                  , semialign
--                  , semigroupoids
--                  , semigroups
                    , serialise
                    , servant
--                  , servant-client
--                  , servant-client-core
--                  , servant-foreign
--                  , servant-openapi3
--                  , servant-options
                    , servant-purescript
--                  , servant-server
--                  , servant-swagger
--                  , servant-swagger-ui
--                  , servant-websockets
                    , shake
                    , shelley-spec-ledger
                    , shelley-spec-non-integral
--                  , should-not-typecheck
--                  , signal
--                  , silently
--                  , size-based
                    , small-steps
                    , smallcheck
--                  , snap-core
--                  , snap-server
--                  , some
--                  , sop-core
--                  , sort
                    , split
--                  , splitmix
--                  , sqlite-simple
                    , statistics
                    , stm
--                  , Stream
--                  , streaming
--                  , streaming-binary
--                  , streaming-bytestring
--                  , streaming-commons
--                  , strict
                    , strict-containers
                    , strict-non-empty-containers
--                  , string-interpolate
--                  , string-qq
--                  , swagger2
--                  , systemd
--                  , tagged
--                  , tasty
--                  , tasty-bench
--                  , tasty-expected-failure
--                  , tasty-golden
--                  , tasty-hedgehog
--                  , tasty-hunit
--                  , tasty-quickcheck
--                  , tasty-smallcheck
--                  , tdigest
--                  , template-haskell
--                  , temporary
--                  , test
--                  , test-framework
--                  , test-framework-hunit
--                  , test-framework-quickcheck2
--                  , text
--                  , text-ansi
                    , text-class
--                  , text-short
--                  , th-abstraction
--                  , th-lift
--                  , th-lift-instances
--                  , th-utilities
--                  , these
--                  , threepenny-gui
                    , time
--                  , time-out
--                  , time-units
                    , tls
                    , trace-dispatcher
                    , trace-forward
                    , trace-resources
--                  , tracer-transformers
                    , transformers
                    , transformers-compat
                    , transformers-except
--                  , tree-diff
--                  , tx-generator
--                  , typed-process
                    , typed-protocols
                    , typed-protocols-cborg
                    , typed-protocols-examples
--                  , typerep-map
--                  , unagi-chan
--                  , Unique
--                  , unix
--                  , unix-bytestring
--                  , unix-compat
--                  , unliftio
--                  , unliftio-core
--                  , unordered-containers
--                  , utf8-string
--                  , uuid
--                  , validation
                    , vector
                    , vector-algorithms
                    , void
--                  , wai
--                  , wai-app-static
--                  , wai-cors
--                  , wai-extra
--                  , warp
--                  , warp-tls
----                , web-ghc
--                  , websockets
--                  , wide-word
--                  , Win32
                    , Win32-network
--                  , witherable
--                  , wl-pprint
--                  , wl-pprint-text
                    , word-array
--                  , x509
--                  , x509-store
--                  , x509-validation
                    , yaml
    default-language: Haskell2010
    ghc-options     : -fplugin-opt PlutusTx.Plugin:defer-errors -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise -Wall
