cabal-version:      3.0
name:               marlowe-dependency-docs
version:            0.1.0.0
synopsis:           Collection of Haskell package versions upon which the main branch of marlowe-cardano depends.
license:            Apache-2.0
license-file:       LICENSE
author:             Brian W Bush <brian.bush@iohk.io>
maintainer:         Brian W Bush <brian.bush@iohk.io>

library
    exposed-modules : Compendium
    hs-source-dirs  : src
    build-depends   : base ^>= 4.14.3.0
                    , abstract-deque
                    , adjunctions
                    , aeson
                    , aeson-pretty
                    , algebraic-graphs
                    , array
                    , async
                    , async-timer
                    , attoparsec
                    , attoparsec-iso8601
                    , base16-bytestring
                    , base58-bytestring
                    , base64-bytestring
                    , base64-bytestring-type
--                  , beam-core
--                  , beam-migrate
--                  , beam-sqlite
                    , bech32
                    , bifunctors
                    , bimap
                    , binary
--                  , blaze-builder
--                  , blaze-html
--                  , blaze-markup
--                  , blaze-textual
                    , byron-spec-chain
                    , byron-spec-ledger
                    , bytestring
                    , cardano-addresses
                    , cardano-addresses-cli
--                  , cardano-addresses-jsapi
--                  , cardano-addresses-jsbits
                    , cardano-api
                    , cardano-binary
                    , cardano-cli
--                  , cardano-client
                    , cardano-config
                    , cardano-crypto
                    , cardano-crypto-class
                    , cardano-crypto-praos
                    , cardano-crypto-wrapper
  --                , cardano-db
  --                , cardano-db-sync
  --                , cardano-db-sync-extended
  --                , cardano-db-tool
--                  , cardano-ledger
                    , cardano-ledger-alonzo
                    , cardano-ledger-byron
                    , cardano-ledger-core
--                  , cardano-ledger-example-shelley
--                  , cardano-ledger-pretty
                    , cardano-ledger-shelley
                    , cardano-ledger-shelley-ma
                    , cardano-node
                    , cardano-numeric
                    , cardano-prelude
                    , cardano-protocol-tpraos
--                  , cardano-sl-x509
                    , cardano-slotting
  --                , cardano-smash-server
                    , cardano-submit-api
  --                , cardano-sync
                    , cardano-wallet
                    , cardano-wallet-cli
                    , cardano-wallet-core
                    , cardano-wallet-core-integration
                    , cardano-wallet-launcher
--                  , cassava
                    , cborg
                    , cereal
--                  , clock
--                  , compact-map
                    , conduit
                    , conduit-extra
                    , containers
--                  , contra-tracer
                    , contravariant
                    , criterion
                    , criterion-measurement
                    , cryptohash
                    , cryptonite
                    , data-default
                    , data-fix
                    , deepseq
--                  , delay
                    , digest
                    , directory
                    , dlist
--                  , dns
                    , either
--                  , ekg
--                  , ekg-core
--                  , ekg-forward
--                  , exceptions
--                  , extensible-effects
                    , extra
--                  , fake-pab
                    , fast-logger
--                  , file-embed
--                  , filelock
                    , filepath
--                  , flat
--                  , foldl
                    , free
                    , freer-extras
                    , freer-simple
--                  , ghc-heap
--                  , ghc-prim
                    , goblins
--                  , graphviz
--                  , groups
                    , hashable
                    , hedgehog
--                  , hedgehog-corpus
                    , hedgehog-extras
                    , hedgehog-quickcheck
                    , hspec
                    , hspec-core
--                  , hspec-expectations
--                  , hspec-expectations-lifted
--                  , hspec-expectations-pretty-diff
--                  , hspec-golden
--                  , hspec-golden-aeson
--                  , hspec-hedgehog
                    , http-api-data
                    , http-client
                    , http-client-tls
                    , http-conduit
                    , http-media
                    , http-types
                    , HUnit
--                  , insert-ordered-containers
--                  , io-classes
--                  , io-sim
--                  , iohk-monitoring
--                  , jwt
                    , lens
                    , lens-aeson
--                  , lifted-base
--                  , lobemo-backend-aggregation
--                  , lobemo-backend-editor
--                  , lobemo-backend-ekg
--                  , lobemo-backend-monitoring
--                  , lobemo-backend-trace-acceptor
--                  , lobemo-backend-trace-forwarder
--                  , lobemo-scribe-systemd
  --                , mantra
  --                , mantra-oracle
                    , marlowe
                    , marlowe-actus
                    , marlowe-dashboard-server
                    , marlowe-playground-server
                    , marlowe-symbolic
--                  , math-functions
                    , measures
--                  , megaparsec
                    , memory
--                  , microlens
--                  , microlens-mtl
--                  , microlens-th
--                  , microstache
                    , mime-types
                    , monad-control
                    , monad-logger
                    , MonadRandom
--                  , mono-traversable
--                  , monoidal-containers
--                  , monoidal-synchronisation
--                  , moo
                    , mtl
                    , mwc-random
                    , network
                    , network-mux
                    , network-uri
--                  , non-integral
                    , nonempty-containers
                    , openapi3
                    , optparse-applicative
                    , optparse-applicative-fork
                    , orphans-deriving-via
                    , ouroboros-consensus
                    , ouroboros-consensus-byron
--                  , ouroboros-consensus-byronspec
                    , ouroboros-consensus-cardano
--                  , ouroboros-consensus-mock
                    , ouroboros-consensus-shelley
                    , ouroboros-network
                    , ouroboros-network-framework
--                  , parsec
--                  , parser-combinators
                    , persistent
--                  , persistent-postgresql
                    , persistent-sqlite
                    , persistent-template
--                  , pipes
                    , playground-common
  --                , plutus-benchmark
--                  , plutus-benchmark-common
                    , plutus-chain-index
                    , plutus-chain-index-core
                    , plutus-contract
                    , plutus-core
                    , plutus-errors
  --                , plutus-example
                    , plutus-ghc-stub
                    , plutus-ledger
                    , plutus-ledger-api
  --                , plutus-metatheory
                    , plutus-pab
                    , plutus-playground-server
--                  , plutus-playground-usecases
                    , plutus-tx
                    , plutus-tx-plugin
                    , plutus-use-cases
--                  , postgresql-simple
                    , pretty
                    , pretty-show
                    , pretty-simple
                    , prettyprinter
                    , prettyprinter-configurable
--                  , primitive
                    , process
                    , process-extras
                    , profunctors
--                  , prometheus
--                  , protolude
                    , psqueues
                    , purescript-bridge
                    , QuickCheck
                    , quickcheck-arbitrary-adt
                    , quickcheck-classes
                    , quickcheck-classes-base
                    , quickcheck-dynamic
                    , quickcheck-instances
                    , random
                    , random-shuffle
                    , regex-base
                    , regex-compat
                    , regex-pcre-builtin
                    , regex-posix
                    , resource-pool
                    , resourcet
                    , retry
                    , row-types
--                  , safe
--                  , safe-exceptions
--                  , say
                    , sbv
                    , scientific
                    , scrypt
                    , serialise
                    , servant
                    , servant
                    , servant-blaze
                    , servant-client
                    , servant-client-core
                    , servant-foreign
                    , servant-openapi3
                    , servant-options
                    , servant-purescript
                    , servant-server
                    , servant-swagger-ui
                    , servant-swagger-ui-core
                    , servant-websockets
                    , shake
                    , shelley-spec-ledger
                    , shelley-spec-non-integral
--                  , small-steps
                    , smallcheck
--                  , snap-core
--                  , snap-server
--                  , sort
                    , split
                    , sqlite-simple
                    , statistics
                    , stm
--                  , streaming
--                  , streaming-binary
--                  , streaming-bytestring
--                  , streaming-commons
--                  , strict
                    , strict-containers
                    , strict-non-empty-containers
--                  , string-interpolate
--                  , string-qq
--                  , swagger2
--                  , systemd
                    , tasty
                    , tasty-bench
                    , tasty-expected-failure
                    , tasty-golden
                    , tasty-hedgehog
                    , tasty-hunit
                    , tasty-quickcheck
                    , tasty-smallcheck
                    , template-haskell
                    , text
--                  , text-short
                    , time
                    , time-out
                    , time-units
                    , tls
--                  , trace-dispatcher
--                  , trace-forward
--                  , trace-resources
--                  , tracer-transformers
                    , transformers
                    , transformers-compat
                    , transformers-except
--                  , typed-process
                    , typed-protocols
                    , typed-protocols-cborg
                    , typed-protocols-examples
--                  , typerep-map
--                  , unix
--                  , unix-bytestring
--                  , unix-compat
--                  , unliftio
--                  , unliftio-core
                    , unordered-containers
--                  , utf8-string
                    , uuid
--                  , validation
                    , vector
                    , vector-algorithms
                    , void
                    , wai
                    , wai-app-static
                    , wai-cors
                    , wai-extra
                    , wai-logger
                    , wai-websockets
                    , warp
                    , warp-tls
                    , web-ghc
                    , websockets
--                  , Win32
--                  , Win32-network
--                  , witherable
--                  , wl-pprint
--                  , wl-pprint-text
                    , word-array
--                  , x509
--                  , x509-store
--                  , x509-validation
--                  , xhtml
                    , yaml
    default-language: Haskell2010
    ghc-options     : -fplugin-opt=PlutusTx.Plugin:defer-errors -Wall
