cabal-version:      3.0
name:               marlowe-dependency-docs
version:            0.2.0.0
synopsis:           Collection of Haskell package versions upon which the main branch of marlowe-cardano depends.
license:            Apache-2.0
license-file:       LICENSE
author:             Brian W Bush <brian.bush@iohk.io>
maintainer:         Brian W Bush <brian.bush@iohk.io>

library
    exposed-modules : Compendium
    hs-source-dirs  : src
    build-depends   : base ^>= 4.14.3.0
                    , byron-spec-chain
                    , byron-spec-ledger
                    , cardano-addresses
                    , cardano-addresses-cli
                    , cardano-api
                    , cardano-binary
                    , cardano-crypto
                    , cardano-crypto-class
                    , cardano-crypto-praos
                    , cardano-crypto-wrapper
                    , cardano-data
                    , cardano-ledger-alonzo
                    , cardano-ledger-byron
                    , cardano-ledger-core
                    , cardano-ledger-pretty
                    , cardano-ledger-shelley
                    , cardano-ledger-shelley-ma
                    , cardano-node
                    , cardano-numeric
                    , cardano-prelude
                    , cardano-protocol-tpraos
                    , cardano-slotting
                    , cardano-wallet
                    , cardano-wallet-cli
                    , cardano-wallet-core
                    , cardano-wallet-core-integration
                    , cardano-wallet-launcher
                    , mainland-pretty
                    , marlowe
                    , marlowe-actus
                    , marlowe-cli
                    , marlowe-dashboard-server
                    , marlowe-playground-server
                    , marlowe-symbolic
                    , ouroboros-consensus
                    , ouroboros-consensus-byron
                    , ouroboros-consensus-cardano
                    , ouroboros-consensus-protocol
                    , ouroboros-consensus-shelley
                    , ouroboros-network
                    , ouroboros-network-framework
                    , playground-common
                    , plutus-chain-index
                    , plutus-chain-index-core
                    , plutus-contract
                    , plutus-core
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-ledger-constraints
                    , plutus-pab
                    , plutus-tx
                    , plutus-tx-plugin
                    , plutus-use-cases
                    , web-ghc
                    , HUnit
                    , MonadRandom
                    , QuickCheck
                    , SHA
                    , aeson
                    , aeson-pretty
                    , array
                    , async
                    , async-timer
                    , attoparsec
                    , attoparsec-iso8601
                    , base16-bytestring
                    , base58-bytestring
                    , base64-bytestring
                    , base64-bytestring-type
                    , beam-core
                    , beam-migrate
                    , beam-sqlite
                    , bech32
                    , bifunctors
                    , bimap
                    , binary
                    , blaze-builder
                    , blaze-html
                    , blaze-markup
                    , blaze-textual
                    , bytestring
                    , bytestring-builder
                    , case-insensitive
                    , cassava
                    , cborg
                    , cereal
                    , comonad
                    , conduit
                    , conduit-extra
                    , containers
                    , contravariant
                    , criterion-measurement
                    , cryptohash-md5
                    , cryptohash-sha1
                    , cryptonite
                    , cryptostore
                    , data-default
                    , data-fix
                    , deepseq
                    , deque
                    , digest
                    , directory
                    , either
                    , exceptions
                    , extra
                    , fast-logger
                    , formatting
                    , free
                    , freer-simple
                    , groups
                    , hashable
                    , hedgehog
                    , hedgehog-quickcheck
                    , hspec
                    , hspec-core
                    , hspec-expectations
                    , hspec-expectations-lifted
                    , hspec-golden-aeson
                    , http-api-data
                    , http-client
                    , http-client-tls
                    , http-conduit
                    , http-date
                    , http-media
                    , http-types
                    , http2
                    , integer-gmp
                    , integer-logarithms
                    , invariant
                    , kan-extensions
                    , katip
                    , lattices
                    , lens
                    , lens-aeson
                    , lifted-async
                    , lifted-base
                    , megaparsec
                    , memory
                    , microlens
                    , microlens-mtl
                    , microlens-th
                    , microstache
                    , monad-control
                    , monad-logger
                    , monad-loops
                    , monad-par
                    , monad-par-extras
                    , mono-traversable
                    , monoidal-containers
                    , mtl
                    , mtl-compat
                    , network
                    , network-byte-order
                    , network-info
                    , network-uri
                    , old-locale
                    , old-time
                    , openapi3
                    , optics-core
                    , optics-extra
                    , optics-th
                    , optparse-applicative
                    , optparse-generic
                    , parsec
                    , parser-combinators
                    , persistent
                    , persistent-sqlite
                    , persistent-template
                    , pipes
                    , pipes-safe
                    , pqueue
                    , pretty
                    , pretty-show
                    , pretty-simple
                    , prettyprinter
                    , prettyprinter-ansi-terminal
                    , process
                    , process-extras
                    , profunctors
                    , protolude
                    , psqueues
                    , quickcheck-arbitrary-adt
                    , quickcheck-classes
                    , quickcheck-classes-base
                    , quickcheck-instances
                    , quickcheck-io
                    , random
                    , random-shuffle
                    , regex-base
                    , regex-compat
                    , regex-posix
                    , resource-pool
                    , resourcet
                    , row-types
                    , safe
                    , safe-exceptions
                    , sbv
                    , scientific
                    , scrypt
                    , semigroupoids
                    , semigroups
                    , semirings
                    , serialise
                    , servant
                    , servant-blaze
                    , servant-client
                    , servant-client-core
                    , servant-foreign
                    , servant-openapi3
                    , servant-options
                    , servant-server
                    , servant-swagger-ui
                    , servant-swagger-ui-core
                    , servant-websockets
                    , split
                    , sqlite-simple
                    , statistics
                    , statistics-linreg
                    , stm
                    , stm-chans
                    , strict
                    , strict-list
                    , string-conv
                    , syb
                    , tasty
                    , tasty-golden
                    , tasty-hedgehog
                    , tasty-hunit
                    , tasty-quickcheck
                    , tdigest
                    , text
                    , text-conversions
                    , text-short
                    , these
                    , time
                    , time-compat
                    , time-interval
                    , time-locale-compat
                    , time-manager
                    , time-out
                    , time-units
                    , tls
                    , tls-session-manager
                    , transformers
                    , transformers-base
                    , transformers-compat
                    , transformers-except
                    , unordered-containers
                    , utf8-string
                    , uuid
                    , uuid-types
                    , vector
                    , vector-algorithms
                    , vector-binary-instances
                    , vector-sized
                    , vector-th-unbox
                    , void
                    , wai
                    , wai-app-static
                    , wai-cors
                    , wai-extra
                    , wai-logger
                    , wai-websockets
                    , warp
                    , warp-tls
                    , wcwidth
                    , websockets
                    , websockets-snap
                    , word8
                    , yaml
                    , zlib
                    , zlib-bindings
    default
